fix sidebar group list align left and width

--- a/frontend/src/styles/components/_groupBar.css
+++ b/frontend/src/styles/components/_groupBar.css
@@ -150,11 +150,12 @@
   }
 
   .sidebar-group-list {
+    left: 0;
     display: grid;
     grid-template-columns: 20% 80%;
     grid-gap: 5px;
     height: 55px;
-    width: 240px;
+    width: 300px;
   }
 
   .sidebar-image img {
